# oran-deployment

./: .gitignore  .gitmodules  LICENSE  README.md  README_NetworkSlicing.md  build-oran.sh  install-oran.sh  oran-override.yaml  stop-oran.sh
test/pythonsdk/: .gitignore  LICENSE  Pipfile  README.md  execute-test-suite.sh  requirements.txt  run-tests.sh  setup.cfg  setup.py  test-requirements.txt  test.json  tox.ini
test/pythonsdk/src/oransdk/: __init__.py  version.py
test/pythonsdk/src/oransdk/a1policymanagement/: __init__.py  a1policymanagement.py
test/pythonsdk/src/oransdk/a1sim/: __init__.py  a1sim.py
test/pythonsdk/src/oransdk/aai/: __init__.py  aai.py  service_design_and_creation.py
test/pythonsdk/src/oransdk/clamp/: __init__.py  clamp.py
test/pythonsdk/src/oransdk/configuration/: __init__.py  global_settings.py  loader.py
test/pythonsdk/src/oransdk/dmaap/: __init__.py  dmaap.py  oran_dmaap.py
test/pythonsdk/src/oransdk/enrichmentservice/: __init__.py  enrichmentservice.py
test/pythonsdk/src/orantests/: apex_policy.py  conftest.py  disable_apex_policy.py  disable_cl_k8s.py  disable_test_cl_apex.py  disable_test_cl_k8s.py  disabled_test_cl_apex.py  disabled_test_cl_k8s.py  test_a1sim.py  test_apex_policy.py  test_cl_apex.py  test_cl_k8s.py  test_clamp.py  test_dmaap.py  test_o1.py
test/pythonsdk/test/: test_ApexPolicy.py  test_dmaap.py  test_settings.py
test/pythonsdk/unit-tests/: __init__.py  test_a1policymanagement.py  test_a1sim.py  test_clamp.py  test_dmaap.py  test_enrichmentservice.py  test_policy.py  test_sdnc.py  test_version.py
(+403 files in other folders)
