# SPDX-License-Identifier: Apache-2.0
[metadata]
name = oransdk
version = attr: src.oransdk.version.__version__
description = SDK to use ORAN Programatically
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
#url = https://gitlab.com/Orange-OpenSource/lfn/onap/python-onapsdk
author = AT&T OpenSource
license = Apache 2.0
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7,<4
package_dir=
    =src
packages=find_namespace:
install_requires =
  requests[socks]==2.24.0
  jinja2==2.11.2
  simplejson==3.17.2
  oyaml==1.0
  pyOpenSSL==19.1.0
  jsonschema==3.2.0
setup_requires =
  pytest-runner==5.2
tests_require =
  pytest==6.2.5
  pytest-cov==2.10.1
  requests-mock==1.8.0
  coverage==4.5.4

[options.packages.find]
where=src

[options.package_data]
oransdk = **/templates/*

[aliases]
test=pytest

[tool:pytest]
addopts =
  --verbose --doctest-modules --junitxml=pytest-unit.xml
  --cov-report term-missing --cov-report xml --cov-report html
  --cov=src/oransdk  --maxfail=1 --cov-fail-under=90

testpaths = unit-tests src
